tests/lean/1825.lean.expected.out
1825.lean:2:71-2:84: error: tactic 'native_decide' evaluated that the proposition
  -2147483648 + 2147483648 = -18446744069414584320
is false
