tests/lean/1825.lean
theorem boom : -2147483648 + 2147483648 = 0 := by rfl
theorem boom' : -2147483648 + 2147483648 = -18446744069414584320 := by native_decide
